--- a/vdr.conf/remote.conf
+++ b/vdr.conf/remote.conf
@@ -1,3 +1,190 @@
-[remote]
--p tcp:3333
+LIRC.Up KEY_UP
+LIRC.Down KEY_DOWN
+LIRC.Menu KEY_MENU
+LIRC.Ok KEY_OK
+LIRC.Back KEY_ESC
+LIRC.Left KEY_LEFT
+LIRC.Right KEY_RIGHT
+LIRC.Red KEY_RED
+LIRC.Green KEY_GREEN
+LIRC.Yellow KEY_YELLOW
+LIRC.Blue KEY_BLUE
+LIRC.0 KEY_0
+LIRC.1 KEY_1
+LIRC.2 KEY_2
+LIRC.3 KEY_3
+LIRC.4 KEY_4
+LIRC.5 KEY_5
+LIRC.6 KEY_6
+LIRC.7 KEY_7
+LIRC.8 KEY_8
+LIRC.9 KEY_9
+LIRC.Info KEY_INFO
+LIRC.Play KEY_PLAY
+LIRC.Pause KEY_PAUSE
+LIRC.Play/Pause KEY_PLAYPAUSE
+LIRC.Stop KEY_STOP
+LIRC.Record KEY_RECORD
+LIRC.FastFwd KEY_FASTFORWARD
+LIRC.FastRew KEY_REWIND
+LIRC.Next KEY_NEXT
+LIRC.Prev KEY_BACK
+LIRC.Power KEY_POWER2
+LIRC.Channel+ KEY_CHANNELUP
+LIRC.Channel- KEY_CHANNELDOWN
+LIRC.PrevChannel KEY_PREVIOUS
+LIRC.Volume+ KEY_VOLUMEUP
+LIRC.Volume- KEY_VOLUMEDOWN
+LIRC.Mute KEY_MUTE
+LIRC.Subtitles KEY_SUBTITLE
+LIRC.Schedule KEY_EPG
+LIRC.Channels KEY_CHANNEL
+LIRC.Audio KEY_MODE
+LIRC.Timers KEY_TIME
+LIRC.Recordings KEY_PVR
+LIRC.Setup KEY_SETUP
+LIRC.User0 KEY_TEXT
+LIRC.User1 KEY_PROG1
+LIRC.User2 KEY_PROG2
+LIRC.User3 KEY_PROG3
+LIRC.User4 KEY_PROG4
+LIRC.User5 KEY_AUDIO
+LIRC.User6 KEY_VIDEO
+LIRC.User7 KEY_IMAGES
+LIRC.User8 KEY_FN
+LIRC.User9 KEY_SCREEN
 
+XKeySym.Up         Up
+XKeySym.Down       Down
+XKeySym.Menu       Home
+XKeySym.Menu       Tab
+XKeySym.Menu       KP_Home
+XKeySym.Ok         Return
+XKeySym.Ok         KP_Enter
+XKeySym.Back       BackSpace
+XKeySym.Back       KP_Separator
+XKeySym.Left       Left
+XKeySym.Right      Right
+XKeySym.Up         KP_Up
+XKeySym.Down       KP_Down
+XKeySym.Left       KP_Left
+XKeySym.Right      KP_Right
+XKeySym.Red        F1
+XKeySym.Green      F2
+XKeySym.Yellow     F3
+XKeySym.Blue       F4
+XKeySym.0          0
+XKeySym.1          1
+XKeySym.2          2
+XKeySym.3          3
+XKeySym.4          4
+XKeySym.5          5
+XKeySym.6          6
+XKeySym.7          7
+XKeySym.8          8
+XKeySym.9          9
+XKeySym.0          KP_0
+XKeySym.1          KP_1
+XKeySym.2          KP_2
+XKeySym.3          KP_3
+XKeySym.4          KP_4
+XKeySym.5          KP_5
+XKeySym.6          KP_6
+XKeySym.7          KP_7
+XKeySym.8          KP_8
+XKeySym.9          KP_9
+XKeySym.Info       End
+XKeySym.Info       KP_End
+XKeySym.Pause      F9
+XKeySym.FastFwd    F6
+XKeySym.FastRew    F5
+XKeySym.Power      Pause
+XKeySym.Volume+    F12
+XKeySym.Volume-    F11
+XKeySym.Volume+    KP_Add
+XKeySym.Volume-    KP_Subtract
+XKeySym.Mute       F10
+XKeySym.User1      F5
+XKeySym.User2      F6
+XKeySym.User3      F7
+XKeySym.User4      F8
+XKeySym.User5      Print
+XKeySym.User6      Scroll_Lock
+XKeySym.User7      Insert
+XKeySym.User8      KP_Divide
+XKeySym.User9      KP_Multiply
+XKeySym.Audio      Menu
+XKeySym.Channel+   Prior
+XKeySym.Channel-   Next
+XKeySym.Channel+   KP_Prior
+XKeySym.Channel-   KP_Next
+XKeySym.Volume+    XF86AudioRaiseVolume
+XKeySym.Volume-    XF86AudioLowerVolume
+XKeySym.Mute       XF86AudioMute
+XKeySym.Stop       XF86AudioStop
+XKeySym.Play/Pause  XF86AudioPlay
+XKeySym.Prev       XF86AudioPrev
+XKeySym.Next       XF86AudioNext
+
+remote-tcp:3333.Up         0000000000415B1B
+remote-tcp:3333.Down       0000000000425B1B
+remote-tcp:3333.Menu       000000000000006D
+remote-tcp:3333.Ok         000000000000000D
+remote-tcp:3333.Back       000000000000007F
+remote-tcp:3333.Left       0000000000445B1B
+remote-tcp:3333.Right      0000000000435B1B
+remote-tcp:3333.Red        0000000000504F1B
+remote-tcp:3333.Green      0000000000514F1B
+remote-tcp:3333.Yellow     0000000000524F1B
+remote-tcp:3333.Blue       0000000000534F1B
+remote-tcp:3333.0          0000000000000030
+remote-tcp:3333.1          0000000000000031
+remote-tcp:3333.2          0000000000000032
+remote-tcp:3333.3          0000000000000033
+remote-tcp:3333.4          0000000000000034
+remote-tcp:3333.5          0000000000000035
+remote-tcp:3333.6          0000000000000036
+remote-tcp:3333.7          0000000000000037
+remote-tcp:3333.8          0000000000000038
+remote-tcp:3333.9          0000000000000039
+remote-tcp:3333.Info       0000000000000069
+remote-tcp:3333.Play       0000000000000070
+remote-tcp:3333.Pause      0000000000000020
+remote-tcp:3333.Channel+   000000000000002B
+remote-tcp:3333.Channel-   000000000000002D
+remote-tcp:3333.Volume+    000000007E355B1B
+remote-tcp:3333.Volume-    000000007E365B1B
+remote-tcp:3333.Mute       0000000000485B1B
+remote-tcp:3333.Audio      0000000000465B1B
+
+KBD.Up         00000000001B5B41
+KBD.Down       00000000001B5B42
+KBD.Menu       000000000000006D
+KBD.Ok         000000000000000D
+KBD.Back       000000000000007F
+KBD.Left       00000000001B5B44
+KBD.Right      00000000001B5B43
+KBD.Red        000000001B5B5B41
+KBD.Green      000000001B5B5B42
+KBD.Yellow     000000001B5B5B43
+KBD.Blue       000000001B5B5B44
+KBD.0          0000000000000030
+KBD.1          0000000000000031
+KBD.2          0000000000000032
+KBD.3          0000000000000033
+KBD.4          0000000000000034
+KBD.5          0000000000000035
+KBD.6          0000000000000036
+KBD.7          0000000000000037
+KBD.8          0000000000000038
+KBD.9          0000000000000039
+KBD.Info       0000000000000069
+KBD.FastFwd    0000001B5B31377E
+KBD.FastRew    000000001B5B5B45
+KBD.Power      0000000000000070
+KBD.Volume+    0000001B5B32347E
+KBD.Volume-    0000001B5B32337E
+KBD.Mute       0000001B5B32317E
+KBD.User7      0000001B5B31387E
+KBD.User8      0000001B5B31397E
+KBD.User9      0000001B5B32307E
